# denso_robot_ros

./: README.md
denso_robot_bringup/launch/: denso_robot_bringup.launch  vs060_hand_bringup.launch
denso_robot_descriptions/vs060_description/: vs060.launch.xml
denso_robot_descriptions/vs060_hand_description/: denso_robot_control.yaml  hand.xacro  (+3 more)
denso_robot_gazebo/: CMakeLists.txt  package.xml
denso_robot_gazebo/launch/: denso_robot_gazebo.launch
denso_robot_gazebo/models/: CMakeLists.txt
denso_robot_gazebo/models/beer/: CMakeLists.txt
denso_robot_gazebo/models/cafe_table/: CMakeLists.txt  model.sdf
denso_robot_gazebo/models/cafe_table/meshes/: cafe_table_small.dae
denso_robot_gazebo/models/coke_can/: CMakeLists.txt
denso_robot_gazebo/models/table/: CMakeLists.txt  model.sdf
denso_robot_gazebo/models/wood_cube_10cm/: CMakeLists.txt
denso_robot_gazebo/script/: spawn_objects
denso_robot_gazebo/worlds/: denso_robot.world
denso_robot_hand_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ik_trajectory_exec/: CMakeLists.txt  package.xml
movegroup_cpp_interface/: CMakeLists.txt  package.xml
movegroup_py_interface/: CMakeLists.txt  package.xml
perception_pipeline/: CMakeLists.txt  package.xml
pick_place/: CMakeLists.txt  package.xml
pick_place_gazebo/: CMakeLists.txt  package.xml
realsense_gazebo_plugin/: README.md
simple_trajectory/: CMakeLists.txt  README.md  package.xml
trajectory_w_move_group/: CMakeLists.txt  README.md  package.xml
trajectory_w_movegroup/: CMakeLists.txt  ErrorTentativeCorrect.txt  package.xml
(+49 files in other folders)
